# PyTTa

./: .gitignore  Contributing.md  pyproject.toml
pytta/: __init__.py  functions.py  generate.py  properties.py
pytta/apps/: roomir.py
pytta/classes/: _base.py  filter.py  measurement.py  signal.py  streaming.py
